style: adjust UI(view only)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nerdle App</title>
+    <title>Nerdle - the daily numbers game</title>
 
     <link rel="manifest" href="/manifest.json" />
     <meta name="description" content="Svelte PWA starter template" />
