fix: resolve filepath (manifest.json).

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nerdle - the daily numbers game</title>
@@ -14,15 +14,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Svelte PWA" />
-    <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png" />
+    <link rel="apple-touch-icon" href="/icons/icon-152x152.png" />
 
-    <!-- <link rel="stylesheet" href="/normalize.css" /> -->
-   <!-- You can remove this is you don't want to make your PWA installable -->
-   <script
+    <!-- You can remove this is you don't want to make your PWA installable -->
+    <script
       type="module"
-      src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"
-    ></script>
-
+      src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"></script>
   </head>
   <body>
     <noscript>
